Cleanup language code page

--- a/pages/docs/configuration/locale-translations.mdx
+++ b/pages/docs/configuration/locale-translations.mdx
@@ -40,37 +40,37 @@ Here is a list of all the locales that are currently available in SkinsRestorer.
 
 ### Locale codes
 
-| Language (translated)               | Locale              | config value | file name                                                                                                                         |
-|-------------------------------------|---------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------|
-| Deutsch                             | German              | de           | [locale_de.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_de.json)       |
-| Français                            | French              | fr           | [locale_fr.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_fr.json)       |
-| 简体中文（中国大陆）                          | Chinese Simplified  | zh_hk        | [locale_zh_hk.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_zh_hk.json) |
-| 繁體中文（台灣）                            | Chinese Traditional | zh_tw        | [locale_zh_tw.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_zh_tw.json) |
-| Polski (Polska)                     | Polish              | pl           | [locale_pl.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_pl.json)       |
-| Norsk Bokmål (Norge)                | Norwegian Bokmål    | no           | [locale_no.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_no.json)       |
-| Español                             | Spanish             | es           | [locale_es.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_es.json)       |
-| 日本語 (Nihongo)                       | Japanese            | ja           | [locale_ja.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ja.json)       |
-| Suomi (Suomi)                       | Finnish             | fi           | [locale_fi.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_fi.json)       |
-| Italiano (Italia)                   | Italian             | it           | [locale_it.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_it.json)       |
-| Čeština (Česká Republika)           | Czech               | cs           | [locale_cs.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_cs.json)       |
-| Українська (Ukrayins'ka)            | Ukrainian           | uk           | [locale_uk.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_uk.json)       |
-| Magyar (Magyarország)               | Hungarian           | hu           | [locale_hu.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_hu.json)       |
-| Română (România)                    | Romanian            | ro           | [locale_ro.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ro.json)       |
-| Türkçe (Türkiye)                    | Turkish             | tr           | [locale_tr.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_tr.json)       |
-| ไทย (thay)                          | Thai                | th           | [locale_th.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_th.json)       |
-| 한국어 (Hangugeo)                      | Korean              | ko           | [locale_ko.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ko.json)       |
-| Български (България)                | Bulgarian           | bg           | [locale_bg.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_bg.json)       |
-| Català (Catalunya)                  | Catalan             | ca           | [locale_ca.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ca.json)       |
-| Dansk (Danmark)                     | Danish              | da           | [locale_da.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_da.json)       |
-| Lietuvių                            | Lithuanian          | lt           | [locale_it.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_lt.json)       |
-| Nederlands                          | Dutch               | nl           | [locale_nl.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_nl.json)       |
-| اللغة العربية (alLuġah al'Arabiyye) | Arabic              | ar           | [locale_ar.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_ar.json)       |
+| Locale              | config value | file name           |
+|---------------------|--------------|---------------------|
+| German              | `de`         | `locale_de.json`    |
+| French              | `fr`         | `locale_fr.json`    |
+| Chinese Simplified  | `zh_hk`      | `locale_zh_hk.json` |
+| Chinese Traditional | `zh_tw`      | `locale_zh_tw.json` |
+| Polish              | `pl`         | `locale_pl.json`    |
+| Norwegian Bokmål    | `no`         | `locale_no.json`    |
+| Spanish             | `es`         | `locale_es.json`    |
+| Japanese            | `ja`         | `locale_ja.json`    |
+| Finnish             | `fi`         | `locale_fi.json`    |
+| Italian             | `it`         | `locale_it.json`    |
+| Czech               | `cs`         | `locale_cs.json`    |
+| Ukrainian           | `uk`         | `locale_uk.json`    |
+| Hungarian           | `hu`         | `locale_hu.json`    |
+| Romanian            | `ro`         | `locale_ro.json`    |
+| Turkish             | `tr`         | `locale_tr.json`    |
+| Thai                | `th`         | `locale_th.json`    |
+| Korean              | `ko`         | `locale_ko.json`    |
+| Bulgarian           | `bg`         | `locale_bg.json`    |
+| Catalan             | `ca`         | `locale_ca.json`    |
+| Danish              | `da`         | `locale_da.json`    |
+| Lithuanian          | `lt`         | `locale_it.json`    |
+| Dutch               | `nl`         | `locale_nl.json`    |
+| Arabic              | `ar`         | `locale_ar.json`    |
 
 ### Specifications
-| Language (translated) | Locale                          | config value | file name                                                                                                                         |
-|-----------------------|---------------------------------|--------------|-----------------------------------------------------------------------------------------------------------------------------------|
-| 繁體中文（香港特別行政區）         | Chinese Traditional (Hong Kong) | zh_hk        | [locale_zh_hk.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_zh_hk.json) |
-| Français (Québec)     | Canadian French                 | fr_ca        | [locale_fr_ca.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_fr_ca.json) |
-| Português (Brasil)    | Brazilian Portuguese            | pt_br        | [locale_pt_br.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_pt_br.json) |
-| Español (Argentina)   | Argentinian Spanish             | es_ar        | [locale_es_ar.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_es_ar.json) |
-| Norsk nynorsk (Norge) | Norwegian Nynorsk               | nn_no        | [locale_nn_no.json](https://github.com/SkinsRestorer/SkinsRestorerX/blob/dev/shared/src/main/resources/locales/locale_nn_no.json) |
+| Locale                          | config value | file name           |
+|---------------------------------|--------------|---------------------|
+| Chinese Traditional (Hong Kong) | `zh_hk`      | `locale_zh_hk.json` |
+| Canadian French                 | `fr_ca`      | `locale_fr_ca.json` |
+| Brazilian Portuguese            | `pt_br`      | `locale_pt_br.json` |
+| Argentinian Spanish             | `es_ar`      | `locale_es_ar.json` |
+| Norwegian Nynorsk               | `nn_no`      | `locale_nn_no.json` |
