Update storage page

--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -40,7 +40,7 @@ You can find the source code on the [GitHub page](https://github.com/SkinsRestor
 1. Make sure the file and cape (optional) are online with a .png link
 2. Decode a skin to use the template (for example, [notch](https://sessionserver.mojang.com/session/minecraft/profile/069a79f444e94726a5befca90e38aaf5))
 3. Replace it with your skin data and make sure all info matches
-4. Encode it again with base64 and apply it to the matching .skin file
+4. Encode it again with Base64 and apply it to the matching .skin file
 5. Make sure you set the 3rd line to `0` which will avoid getting the skin invalid.
 
 ## Apply custom default skins
