--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -92,6 +92,21 @@ export const FeatureCard = ({title, description, icon}) => {
     )
 }
 
+export const TeamCard = ({githubUsername, description}) => {
+    return (
+        <div className="nextra-card feature-card group flex-col md:flex-row gap-4">
+            <Image src={`https://github.com/${githubUsername}.png`} width={64} height={64} className="rounded-lg"
+                   alt={githubUsername}/>
+            <div className="flex flex-col">
+                <a
+                    href={`https://github.com/${githubUsername}`}
+                    className="font-semibold text-lg">{githubUsername}</a>
+                <p>{description}</p>
+            </div>
+        </div>
+    )
+}
+
 <article
     className="w-full overflow-x-hidden break-words nextra-content flex min-h-[calc(100vh-var(--nextra-navbar-height))] min-w-0 justify-center pb-8 pr-[calc(env(safe-area-inset-right)-1.5rem)]">
     <main className="w-full min-w-0 max-w-6xl px-6 pt-4 md:px-12">
@@ -155,6 +170,14 @@ export const FeatureCard = ({title, description, icon}) => {
                             className="highlight-code">/skins</code>!</span>}
                         icon={<Squares2X2Icon className="w-6 h-6 mx-auto my-2"/>}
                     />
+                </div>
+                <h2 className="text-center text-3xl font-bold mt-8 md:mt-16">
+                    Meet the team
+                </h2>
+                <div className="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 md:mt-16 items-center w-fit mx-auto">
+                    <TeamCard githubUsername="xknat" description="Developer"/>
+                    <TeamCard githubUsername="AlexProgrammerDE" description="Developer"/>
+                    <TeamCard githubUsername="aljaxus" description="System Administrator"/>
                 </div>
             </div>
         </div>
