--- a/pages/docs/troubleshooting.mdx
+++ b/pages/docs/troubleshooting.mdx
@@ -58,7 +58,7 @@ For advanced troubleshooting, you need to have access to your server files and k
 ### Commands not working
 
 If commands aren't working, you need to make sure that you did follow our specific installation instructions. If it
-still doesn't work, try removing the config and messages and restart your proxy, and if you don't have a proxy, your Spigot/Sponge server.
+still doesn't work, try removing the config and messages and restart your proxy, and if you don't have a proxy, your Spigot server.
 
 ### Plugin incompatibility
 
@@ -87,7 +87,6 @@ Very commonly issues happen with:
 - FlameCord
 - Magma
 - Mohist
-- SpongeForge
 - Cardboard
 
 We want to support these platforms, but we can't do it alone if you are a developer and want to help us,
