Update custom skins website

--- a/pages/docs/features/custom-skins.mdx
+++ b/pages/docs/features/custom-skins.mdx
@@ -2,67 +2,59 @@ import {Callout} from "nextra-theme-docs";
 
 # Custom Skins
 
-<Callout type="warning" emoji="🚧">
-    This page has outdated information and will be updated soon.
-</Callout>
-
-Because SkinsRestorer doesn't have a public API,
-We've developed two tools for uploading custom png files to SkinsRestorer!
+SkinsRestorer allows you to create custom skins that you can select via `/skin <name>`.
+All You have to do is either run a command to generate a skin or upload a skin file to the server.
 
 ## How to generate a custom skin
 
-### Skinfile Generator
+Before you start, there are a few things to consider. Custom skins are stored in the SkinsRestorer database or in a file.
+The name affects everyone who runs the `/skin` command, so if an admin generates a custom skin called `Dinnerbone`
+everyone who runs `/skin Dinnerbone` will see the custom skin instead of the original skin.
 
-We get a lot of questions about how to apply a custom skin, lucky we got you covered!
-
-For small servers, we have [Skinfile Generator](https://skinsrestorer.github.io/SkinFile-Generator/)
-
-This web app allows you to convert .png skin files to .skin files that are used by SkinsRestorer.
-If you use the web application, upload the skin files to the directory where skin data is saved and rename the files to
-the usernames they belong to.
-You can find the source code on the [GitHub page](https://github.com/SkinsRestorer/SkinFile-Generator).
-
-### Skin System
-
-If you're a **BIG server network and use a proxy**, we have a website with **AuthMe integration**:
+You would also not want to use a name that a person playing on your server might use,
+as it would override their skin instead of using the skin they have set in their Minecraft account.
 
 <Callout type="info" emoji="ℹ️">
-    Requires MYSQL
+    If you want to set a skin of a player on your server, run `/skin [name] [playername]` instead.
+    Using custom skins to set a skin of a player is not recommended and discouraged.
 </Callout>
 
-"Skin System"
-This web app allows your players to upload .png skin files to the database that is used by SkinsRestorer to allow
-people to use their own skin without a premium account!
-You can find the source code on the [GitHub page](https://github.com/SkinsRestorer/SkinSystem).
+There are multiple ways to generate a custom skin:
 
-### Manual Generating
+### Run a command
 
-1. Make sure the file and cape (optional) are online with a .png link
-2. Decode a skin to use the template (for example, [notch](https://sessionserver.mojang.com/session/minecraft/profile/069a79f444e94726a5befca90e38aaf5))
-3. Replace it with your skin data and make sure all info matches
-4. Encode it again with Base64 and apply it to the matching .skin file
-5. Make sure you set the 3rd line to `0` which will avoid getting the skin invalid.
+Run `/sr createcustom <name> <url> <variant>` to generate a custom skin by URL.
+
+### Skinfile Generator
+
+We have built a web app that allows you to convert .png skin files to .customskin files that are used by SkinsRestorer.
+You can find the Skinfile Generator on [our domain](https://generator.skinsrestorer.net).
+
+<Callout type="warning" emoji="⚠️">
+    The Skinfile Generator only works if you use file storage. MySQL users should use the `/sr createcustom` command.
+</Callout>
+
+It's also [open-source](https://github.com/SkinsRestorer/SkinFile-Generator),
+so you can host it yourself if you want to.
+
+Steps to generate a custom skin using the Skinfile Generator:
+
+1. Get your skin file in .png format
+2. Go to the website (https://generator.skinsrestorer.net)
+3. Hit browse and select your skin
+4. Fill in the skin name in the optional skin name field (Make sure it is lowercase and does not contain a space)
+5. Hit `Upload!`
+6. Download the `name.customskin` file
+7. Upload or replace it on your `plugins/SkinsRestorer/skins` folder
+8. If you do not have Velocity/BungeeCord, put it in your Spigot
+9. Done! You should now be able to do `/skin <name>` and it will appear!
 
 ## Apply custom default skins
 
 If you want to apply a default skin for your server, you can do the following:
 
-1. Set the skin on your own using /skin to load it into the database
-2. Set the defaultskins to true and add the desired skin
-3. Restart the or do "/sr reload"
-
-Done!
-
-## Skinfile Generator for dummies
-
-1. Get your skin file in .png format
-2. Go to the website (https://skinsrestorer.github.io/SkinFile-Generator/)
-3. Hit browse and select your skin
-4. Fill in the skin name in the optional skin name field
-[!] Make sure it is lowercase & doesn't contain a space [!]
-5. Hit "Upload!"
-6. Download the name.skin file
-7. Upload / replace it on your proxy/plugins/skinsrestorer/skins folder
-8. If you don't have bungee, put it in your spigot
-(if you use mysql, open the file and insert the data in your skins rows.)
-done! you should now be able to do `/skin <name>` and it will appear!
+1. Generate a custom skin using the methods above.
+2. Add the file into your skin file directory of either your proxy or your spigot server.
+3. Enable default skins in the config.
+4. Reload SkinsRestorer via `/sr reload`.
+5. Done! Every player that joins your server will now have the default skin you set unless they have set a skin with SkinsRestorer before.
